---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2025-03-30
  Changes:
    - 'Beta' tag added to title.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2025-03-30
  Changes:
    - Added entity descriptions.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-03-30
  Changes:
    - Thumbnail and description.
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2025-03-30
  Changes:
    - The 'busted' quality is now hidden to prevent assemblers from selecting it.
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2025-03-30
  Changes:
    - Fixed that burner assembling machines could not make some items.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-03-30
  Changes:
    - Quality modules made 5x stronger.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-03-30
  Features:
    - Reduced startup log spam.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-03-30
  Features:
    - Initial release.