@@ -3,7 +3,7 @@
     "author": "thesixthroc",
     "version": "0.2.3",
     "title": "Inverted Quality (Beta)",
-    "description": "Inverts Quality into a new system, Degradation.\n\nMined and smelted items start at Nominal degradation. Each time an item is crafted, it has a 90% chance to become more degraded.\n\nThree new entities are provided: Downgrade Port allows low-degradation items to be used in high-degradation recipes; Meltdown Facility allows the melting down of highly degraded items back; and a Burner Assembling Machine to avoid a softlock in the early-game.",
+    "description": "Inverts Quality into a new system, Degradation. Mined and smelted items start at Nominal degradation. Each time an item is crafted, it has a 90% chance to become more degraded.\n\nThree new entities are provided: Downgrade Port allows low-degradation items to be used in high-degradation recipes; Meltdown Facility allows the melting down of highly degraded items back into undegraded base materials; and a Burner Assembling Machine to avoid a softlock in the early-game.",
     "contact": "Discord: thesixthroc",
     "factorio_version": "2.0",
     "dependencies": ["base >= 2.0.42", "space-age >= 2.0.42", "quality >= 2.0.42"]
