@@ -2,21 +2,21 @@ downgrade-port-input-slot-tooltip=Item to be downgraded
 
 [entity-name]
 Inverted-Quality-meltdown-facility=Meltdown facility
-Inverted-Quality-downgrade-port=Downgrade port
+Inverted-Quality-downgrade-port=Downgrader port
 Inverted-Quality-burner-assembling-machine=Burner assembling machine
 
 [entity-description]
-Inverted-Quality-meltdown-facility=Melts down items to 1/8th their base materials.
+Inverted-Quality-meltdown-facility=Melts down items into 1/8 their Nominal base materials.
 Inverted-Quality-downgrade-port=Increases the degradation of inserted items by one tier.
 
 [item-name]
 Inverted-Quality-meltdown-facility=Meltdown facility
-Inverted-Quality-downgrade-port=Downgrade port
+Inverted-Quality-downgrade-port=Downgrader port
 Inverted-Quality-burner-assembling-machine=Burner assembling machine
 
 [recipe-name]
 Inverted-Quality-meltdown-facility=Meltdown facility
-Inverted-Quality-downgrade-port=Downgrade port
+Inverted-Quality-downgrade-port=Downgrader port
 Inverted-Quality-burner-assembling-machine=Burner assembling machine
 Inverted-Quality-meltdown=__1__ meltdown
 Inverted-Quality-downgrade-porting=__1__ downgrading
