@@ -56,7 +56,7 @@ movement-speed-bonus=Decreases movement speed bonus at higher degradation.
 spoils-slower=Spoils more quickly at higher degradation.
 beacon-effectivity=Transmitted effect is unaffected by degradation.
 collection-area=Decreases the collection area at higher degradation.
-collection-arm-count=Less arms collect asteroids at higher degradation.
+collection-arm-count=The same number of arms collect asteroids at higher degradation.
 collection-arm-max-speed=The collector arms move slower at higher degradation.
 storage-size=Decreases the storage size at higher degradation.
 collector-arm-storage-size=Decreases the collector arm storage size at higher degradation.
