@@ -2,6 +2,7 @@
 Version: 0.2.3
 Date: ????
   Changes:
+    - Added a bonus of 10% to all machine crafting speeds.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 2025-03-30
